# kinematics-flow

./: .gitignore  3rd-party-licenses.txt  README.md  TRAINING_DIARY.md  mise.toml  pyproject.toml  run_bench_ep120.sh  train_watchdog.sh
deploy/: README.md  calibrate.py  common.py  execute.py  infer.py  perception.py  run_grasp.py  select.py
deploy/config/: extrinsics.example.yaml
kin_flow/alg/: selector.py
kin_flow/alg/flow/: __init__.py  inference.py  input_target.py  loss.py
kin_flow/cli/: bench.py  train.py
kin_flow/cli/config/: bench.yaml  train.yaml
kin_flow/cli/config/algorithm/: flow.yaml
kin_flow/cli/config/globals/: default.yaml
kin_flow/cli/config/model/: kinematics_flow.yaml
kin_flow/ctrl/: trainer.py
kin_flow/data/: allegro.py  base.py  dexee.py  panda.py  selector.py  shadow.py  vx.py  zipped.py
kin_flow/kin/: base.py  const.py  helper.py  kinematics.py  kinematics_simple.py  op.py  op_numpy.py  wigner_d.py
kin_flow/kin/gripper/: allegro.py  dexee.py  panda.py  shadow.py  vx300.py  z_0.py
kin_flow/net/: debug_wrapper.py  ffn.py  kinematics_flow.py
kin_flow/net/allegro/: feature_pyramid.py  tp.py  weighted_channels.py
kin_flow/net/module/: Jd.npz  connectivity.py  cu_project.py  cu_vec_condition.py  fctp.py  film.py  graph_layer.py  layer_norm.py  multi_scale_tensor_field.py  radial_function.py  so2_graph_layer.py  so2_ops.py  so3_coefficient_mapping.py  so3_grid.py  w3j.py  wigner.py
kin_flow/util/: const.py  dist.py  fps.py  irreps_helper.py  jax_scatter.py  se3.py  se3_numpy.py
kin_flow/util/viz/: __init__.py  _allegro.py  _dexee.py  _panda.py  _shadow.py  _shared.py  _vx300.py  grasp_viz.py
scripts/: launch_bench.sh  launch_train.sh
thrd_party/mj-grasp-sim/: Dockerfile  mise.toml  pyproject.toml
thrd_party/mj-grasp-sim/asset/mj-objects/: fast_eta_objects.txt
thrd_party/mj-grasp-sim/mgs/cli/: gen_gripper_object_grasps.py  gen_scene.py  render_scene.py  show_gripper_contact.py
thrd_party/mj-grasp-sim/mgs/cli/config/: gen_gripper_object_grasps.yaml  gen_scene.yaml  render_scene.yaml  show_gripper_contact.yaml
thrd_party/mj-grasp-sim/mgs/cli/config/gripper/: allegro.yaml  dexee.yaml  panda.yaml  shadow.yaml  vx300.yaml
thrd_party/mj-grasp-sim/mgs/cli/config/object/: subset_from_fast.yaml
thrd_party/mj-grasp-sim/mgs/env/: base.py  clutter_table.py  gravityless_object_grasping.py  selector.py
thrd_party/mj-grasp-sim/mgs/gripper/: allegro.py  base.py  dexee.py  panda.py  selector.py  shadow.py  vx300.py
thrd_party/mj-grasp-sim/mgs/sampler/: antipodal.py  contact.py  helper.py
thrd_party/mj-grasp-sim/mgs/sampler/kin/: allegro.py  base.py  dexee.py  op.py  se3.py  seg_op.py  shadow.py
thrd_party/mj-grasp-sim/mgs/util/: camera.py  file.py  img_proc.py
