[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mj-grasp-sim"
dynamic = ["version"]
authors = [
  { name = "Roman Freiberg", email = "me@romanfreiberg.com" }
]
description = "MuJoCo based grasping simulation"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["simulation", "grasping", "jax"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.11"

dependencies = [
  "mujoco==3.3.5",
  "trimesh==4.8.1",
  "hydra-core==1.3.2",
  "rtree==1.4.1",
  "plotly==6.3.0",
  "tqdm==4.67.1",
  "scipy==1.16.1",
  "pandas==2.3.2",
  "opencv-python==4.12.0.88",
  "pyglet==1.5.31"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "debugpy",
  "isort",
  "black"
]
jax = [
  "jax==0.7.1",
  "optax==0.2.3",
  "flax==0.10.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where   = ["."]
include = ["mgs", "mgs.*"]

[tool.setuptools.dynamic]
version = { attr = "mgs.__init__.__version__" }

